@startuml
'https://plantuml.com/class-diagram
title Eerste class Diagram
skinparam linetype ortho

class TripController {
    +maakTrip(request: TripRequestDTO) : Trip
    +boekTrip(request: tripId) : void
    +wijzigTrip(request: tripId) : void
    +updateTrip(request: tripId) : void
    +deleteTrip(request: tripId) : void
}

class TripService {
    +maakTrip(request: TripRequestDTO) : Trip
    +boekTrip(request: tripId) : void
    +wijzigTrip(request: tripId) : void
    +updateTrip(request: tripId) : void
    +deleteTrip(request: tripId) : void

}

class TripRepository {
    +getAllTrips() : List<Trip>
    +getTrip(tripId: Long) : Trip
    +saveTrip(trip: Trip) : void
    +deleteTrip(tripId: Long) : void
    +updateTrip(trip: Trip) : void
}



class Gebruiker {
    voornaam: String
    achternaam: String
    geboortedatum: String
    adres: String
    email : String
    telefoonnummer : String
    IBAN : String
}

rectangle "Aggregate" {

class Trip <<AR>> {
    id: Long
    username: String
    List<Reiziger> reizigers
    list<BouwSteen> bouwStenen
    +addBouwSteen(bouwSteen: BouwSteen) : void
    +addPerson(person: Person) : void
}


class Reiziger {
    voornaam: String
    achternaam: String
    geboortedatum: String
}

class BouwSteen {
    status: Status
    data: Data
    +addData(data: Data) : void
    +setStatus(status: Status) : void
}

enum Status {
    GEPLAND
    GEREGELD
    BETAALD
    NIET UITVOERBAAR
    UITGEVOERD
}

}

interface Data {
  getInfo() : String
}

class StayData implements Data {
 getInfo() : String
}

interface VerblijfAdapter {
    +updateVerblijf(data: Data) : Data
}


class bookingcomAdapter implements VerblijfAdapter {
    +updateVerblijf(data: Data) : Data
}

class airbnbAdapter implements VerblijfAdapter {
    +updateVerblijf(data: Data) : Data
}



class TripRequestDTO {
    List<Reiziger> reizigers
    List<Data> data
}



TripController "1" -- "1" TripService
TripService "1" -- "1" TripRepository
TripController "1" -- "*" TripRequestDTO

TripService "1" -- "*" Trip
TripService "1" -- "*" VerblijfAdapter


BouwSteen "1" -- "1" Data
BouwSteen "1" -- "1" Status
Trip "1" -- "1,*" BouwSteen
Trip "1" -- "0,*" Reiziger
Trip "1" -- "1" Gebruiker




@enduml
